--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 title: Architect Theme by Jason Long
 ---
-
+<!-- comment! -->
 <div id="home">
 <h2>Welcome to WSU Mobile Application Development</h2>
 
